crates/celo-reth/tests/ui/native_plus_fc.stderr
error[E0308]: mismatched types
 --> tests/ui/native_plus_fc.rs:5:30
  |
5 |     let _ = Native::new(1) + Fc::new(2);
  |             --------------   ^^^^^^^^^^ expected `Native`, found `Fc`
  |             |
  |             expected because this is `Native`
